--- a/styles.css
+++ b/styles.css
@@ -402,7 +402,7 @@ select {
   width: 48px;
   height: 64px;
 
-  background: url('img/ship.png') no-repeat center;
+  background: url('img/shoot_player.png') no-repeat center;
   background-size: contain;
 }
 
